Renamed logo and tefel images and updated references

--- a/src/app/android/android.component.html
+++ b/src/app/android/android.component.html
@@ -21,7 +21,7 @@
   <!-- change languge -->
 </mat-toolbar>
 <img
-  src="../assets/LOGO.png"
+  src="/myCV/assets/logo.jpeg"
   style="width: auto; height: 60px"
   routerLink="/"
   class="logo-button"
