--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,10 +4,11 @@
     <h1 class="about-me">About Me</h1>
     <div>
       <img
-        src="../assets/profile.jpeg"
-        class="profile-pic"
-        alt="profile picture"
-      />
+      src="/myCV/assets/profile.jpeg"
+      class="profile-pic"
+      alt="profile picture"
+    />
+    
       <h4 fxFlex="1 1 auto" class="about-text">
         Hello! my name is Lazar Pešić, a passionate software engineer currently
         finishing my final thesis in Software and Data Engineering at Singidunum
