--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -90,11 +90,11 @@
     <mat-expansion-panel-header>
       <mat-panel-title fxLayoutAlign="center center">
         <mat-icon>history_edu</mat-icon>
-        Certifications
+        Certgit add docsifications
       </mat-panel-title>
     </mat-expansion-panel-header>
     <h1>120-Hours TEFL Certificate Course</h1>
-    <img src="../assets/TEFEL.png" class="certificate-img" alt="Certificate" />
+    <img src="/myCV/assets/tefel.jpeg" class="certificate-img" alt="Certificate" />
   </mat-expansion-panel>
 </mat-accordion>
 <mat-accordion class="cv-column">
