--- a/src/app/android/android.component.html
+++ b/src/app/android/android.component.html
@@ -21,8 +21,18 @@
   <!-- change languge -->
 </mat-toolbar>
 <img
-  src="/myCV/assets/logo.jpeg"
+  src="/myCV/assets/logo.jpg"
   style="width: auto; height: 60px"
   routerLink="/"
   class="logo-button"
 />
+<div class="background-music">
+  <iframe
+    width="0"
+    height="0"
+    src="https://www.youtube.com/embed/7go-2MMeILY?autoplay=1&loop=1&playlist=7go-2MMeILY&mute=1"
+    frameborder="0"
+    allow="autoplay; encrypted-media"
+    allowfullscreen
+  ></iframe>
+</div>
