--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -94,7 +94,7 @@
       </mat-panel-title>
     </mat-expansion-panel-header>
     <h1>120-Hours TEFL Certificate Course</h1>
-    <img src="/myCV/assets/tefel.jpeg" class="certificate-img" alt="Certificate" />
+    <img src="/myCV/assets/tefel.jpg" class="certificate-img" alt="Certificate" />
   </mat-expansion-panel>
 </mat-accordion>
 <mat-accordion class="cv-column">
