--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
       class="profile-pic"
       alt="profile picture"
     />
-    
+    <div>
       <h4 fxFlex="1 1 auto" class="about-text">
         Hello! my name is Lazar Pešić, a passionate software engineer currently
         finishing my final thesis in Software and Data Engineering at Singidunum
