--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -20,7 +20,6 @@
         70% 100%, 30% 100%, /* bottom side */
         0% 70%, 0% 30% /* left side */
     ); /* Octagon shape */
-    margin-right: 20px;
 }
 .about-text{
     background-color: rgb(0, 79, 131);
@@ -52,4 +51,27 @@
     background-color: #003046;
     height: 300px;
     width: 300px;
+}
+
+@media (max-width: 768px) {
+/* Stack the image and text vertically */
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px; 
+  }
+
+  .profile-pic {
+    margin-right: 0; /* Remove the right margin on mobile */
+    margin-bottom: 20px; /* Add space below the image */
+    transform: translateX(16.5%); /* Move the image slightly to the right */
+  }
+
+  .about-text {
+    max-width: 100%; /* Allow the text to take full width */
+    text-align: center; /* Center align the text */
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 }
