--- a/src/app/project-dialog/project-dialog.component.html
+++ b/src/app/project-dialog/project-dialog.component.html
@@ -10,6 +10,7 @@
       />
   <p>{{ data.project.summary }}</p>
   <p>{{ data.project.description }}</p>
+  <p>{{data.project.projectLink}}</p>
 </div>
 <div mat-dialog-actions>
   <button mat-button mat-dialog-close>Close</button>
