--- a/src/app/project-card/project-card.component.html
+++ b/src/app/project-card/project-card.component.html
@@ -1,14 +1,9 @@
 <br />
-<mat-card appearance="outlined">
+<mat-card appearance="outlined" fxLayout="column" fxLayoutAlign="center center" class="card">
   <mat-card-header>
-    <mat-card-title>{{ project.name }}</mat-card-title>
-    <mat-card-subtitle>{{ project.summary }}</mat-card-subtitle>
+    <mat-card-title fxLayoutAlign="center center">{{ project.name }}</mat-card-title>
+    <mat-card-subtitle fxLayoutAlign="center center">{{ project.summary }}</mat-card-subtitle>
   </mat-card-header>
-  <mat-card-content>
-    <div *ngIf="project.pictures.length > 0">
-
-    </div>
-  </mat-card-content>
   <mat-card-footer class="pograming-tags">
     <mat-chip-set>
       <mat-chip
