--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -5,9 +5,9 @@
       I can be reached at the following email:
       <span class="email">{{ emailmy }}</span> <br />
     </p>
-    <p class="head-card-text">or directly massage me on whatsapp</p>
+   <!--  <p class="head-card-text">or directly massage me on whatsapp</p>
     <div fxLayout="column" class="whatsapp-form">
-      <!-- Name field -->
+       Name field 
       <mat-form-field>
         <mat-label class="head-card-text">Name</mat-label>
         <input
@@ -21,7 +21,7 @@
         <mat-error>{{ emptyFieldErrorMessage() }}</mat-error>
         }
       </mat-form-field>
-      <!-- Email -->
+       Email 
       <mat-form-field>
         <mat-label class="head-card-text">Email</mat-label>
         <input
@@ -35,7 +35,7 @@
         <mat-error>{{ emailErrorMessage() }}</mat-error>
         }
       </mat-form-field>
-      <!-- Text message -->
+      Text message 
       <mat-form-field>
         <mat-label class="head-card-text">Massage</mat-label>
         <textarea
@@ -50,7 +50,7 @@
         }
       </mat-form-field>
       <button class="submit-button">Send Form to Whatsapp</button>
-    </div>
+    </div> -->
 
     <p class="head-card-text">
       Feel free to connect with me on any of the following platforms:
