Commit before updating Angular packages

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -53,7 +53,7 @@
     </div> -->
 
     <p class="head-card-text">
-      Feel free to connect with me on any of the following platforms:
+      Feel free to contact me on any of the following platforms:
     </p>
   </mat-card>
 </div>
@@ -66,7 +66,7 @@
         width="40"
         height="40"
       />
-      <h3 mat-line>GitHub</h3>
+      <h3 mat-line class="head-card-text">GitHub</h3>
     </mat-card>
   </a>
   <a
@@ -80,7 +80,7 @@
         width="40"
         height="40"
       />
-      <h3 mat-line>Steam</h3>
+      <h3 mat-line class="head-card-text">Steam</h3>
     </mat-card>
   </a>
   <a href="https://www.linkedin.com/in/lazar-pesic-958731322/" target="_blank">
@@ -91,7 +91,7 @@
         width="40"
         height="40"
       />
-      <h3 mat-line>LinkedIn</h3>
+      <h3 mat-line class="head-card-text">LinkedIn</h3>
     </mat-card>
   </a>
   <a href="https://www.instagram.com/lakikill15/" target="_blank">
@@ -102,7 +102,7 @@
         width="40"
         height="40"
       />
-      <h3 mat-line>Instagram</h3>
+      <h3 mat-line class="head-card-text">Instagram</h3>
     </mat-card>
   </a>
 </div>
