--- a/src/app/project-card/project-card.component.html
+++ b/src/app/project-card/project-card.component.html
@@ -1,7 +1,7 @@
 <br />
 <mat-card appearance="outlined" fxLayout="column" fxLayoutAlign="center center" class="card">
   <mat-card-header>
-    <mat-card-title fxLayoutAlign="center center">{{ project.name }}</mat-card-title>
+    <mat-card-title style="color: rgb(178, 219, 255);" fxLayoutAlign="center center">{{ project.name }}</mat-card-title>
     <mat-card-subtitle fxLayoutAlign="center center">{{ project.summary }}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-footer class="pograming-tags">
