--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -34,34 +34,34 @@
     <h1>Bachelor in Software and Data Engineering</h1>
     <h2>Singidunum University, Belgrade</h2>
     <h3>Sep 2017 - 2024</h3>
-    <h3>finishing final thesis for diploma, cleared all the other classes.</h3>
+    <h3>Finishing final thesis for diploma, cleared all the other classes</h3>
     <li>Web Programming</li>
-    <li>Internet technology and Web Services</li>
+    <li>Internet Technology and Web Services</li>
     <li>Networks</li>
     <li>Web Design and Programming</li>
     <li>Artificial Intellence</li>
-    <li>Computer vision</li>
-    <li>Introduction to machine learning</li>
+    <li>Computer Vision</li>
+    <li>Introduction to Machine Learning</li>
     <li>Programming Languages for Data Science</li>
-    <li>Applied probability and statistics</li>
-    <li>Security aspects in software engineering</li>
-    <li>Software testing and quality assurance</li>
-    <li>Games computing</li>
-    <li>Mobile application development </li>
+    <li>Applied Probability and Statistics</li>
+    <li>Security Aspects in Software Engineering</li>
+    <li>Software Testing and Quality Assurance</li>
+    <li>Games Computing</li>
+    <li>Mobile Application Development</li>
     <li>Computers Graphics</li>
     <li>Sensor Systems</li>
-    <li>Internet of things</li>
+    <li>Internet of Things</li>
     <li>Signals and Systems</li>
     <li>Operating Systems and System Programming</li>
     <li>Mining of Massive Datasets</li>
     <li>Software Specification and Modelling</li>
-    <li>Cloud computing</li>
-    <li>Non-relational databases</li>
-    <li>Algorithms and Data structures</li>
-    <li>Database systems</li>
-    <li>Object oriented software design and development</li>
+    <li>Cloud Computing</li>
+    <li>Non-relational Databases</li>
+    <li>Algorithms and Data Structures</li>
+    <li>Database Systems</li>
+    <li>Object Oriented Software Design and Development</li>
     <li>Scientific English</li>
-    <li>Entrepreneurship in software engineering</li>
+    <li>Entrepreneurship in Software Engineering</li>
     <li>Principles of Computer Programming</li>
     <li>Spanish language 1</li>
     <li>Discrete Mathematics</li>
@@ -70,18 +70,18 @@
     <h1>Theoretical and Experimental Physics</h1>
     <h2>Faculty of Physics, Belgrade</h2>
     <h3>2015 - 2017</h3>
-    <h3>attendet</h3>
-    <li>Physics laboratory 1&2</li>
-    <li>Foundamentals of astrophysics</li>
-    <li>Processing the measurement results</li>
-    <li>Basics of chemistry</li>
+    <h3>Attendet</h3>
+    <li>Physics Laboratory 1&2</li>
+    <li>Foundamentals of Astrophysics</li>
+    <li>Processing the Measurement Results</li>
+    <li>Basics of Chemistry</li>
     <br />
     <h1>High School</h1>
     <h2>Mathematical and Natural Science Gymnasia, Cacak Serbia</h2>
     <h3>2014 - 2015</h3>
     <br />
     <h1>High School</h1>
-    <h2>Megiddo, kibbutz Ein ha shofet, Israel</h2>
+    <h2>Megiddo, Kibbutz Ein ha Shofet, Israel</h2>
     <h3>2014 - 2015</h3>
   </mat-expansion-panel>
 </mat-accordion>
@@ -90,11 +90,15 @@
     <mat-expansion-panel-header>
       <mat-panel-title fxLayoutAlign="center center">
         <mat-icon>history_edu</mat-icon>
-        Certgit add docsifications
+        Certifications
       </mat-panel-title>
     </mat-expansion-panel-header>
     <h1>120-Hours TEFL Certificate Course</h1>
-    <img src="/myCV/assets/TEFEL.jpg" class="certificate-img" alt="Certificate" />
+    <img
+      src="/myCV/assets/TEFEL.jpg"
+      class="certificate-img"
+      alt="Certificate"
+    />
   </mat-expansion-panel>
 </mat-accordion>
 <mat-accordion class="cv-column">
@@ -135,7 +139,7 @@
     <li>Photoshop/Krita</li>
     <br />
     <h2>Other</h2>
-    <li>Driving Licence B category</li>
+    <li>Driving Licence B Category</li>
     <li>IOT/Arduino</li>
   </mat-expansion-panel>
 </mat-accordion>
