--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,13 +10,11 @@
     />
     <div>
       <h4 fxFlex="1 1 auto" class="about-text">
-        Hello! my name is Lazar Pešić, a passionate software engineer currently
+        Hello! My name is Lazar Pešić, a passionate software engineer currently
         finishing my final thesis in Software and Data Engineering at Singidunum
-        University in Belgrade. With a strong academic foundation in Computer
-        Vision, Artificial Intelligence, and Cloud Computing, I am well-versed
+        University in Belgrade. With a strong academic foundation in Full stack Web Development, Computer
+        Vision, Artificial Intelligence and Game Development. I am well-versed
         in both theoretical and practical aspects of software development.
-        Throughout my studies, I have developed a robust skill set that includes
-        Python, SQL, Angular, MongoDB, and Unity.
       </h4>
     </div>
   </div>
