finished form part & removed unesesery library for puppet

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -5,7 +5,8 @@
       I can be reached at the following email:
       <span class="email">{{ emailmy }}</span> <br />
     </p>
-    <p class="head-card-text">or directly massage me on whatsapp</p>
+    <p class="head-card-text">or directly massage me on whatsapp (not working yet)</p>
+    <!-- when working add to the text above (your maasage will be answered the next day) -->
     <form
       [formGroup]="formForWhatsApp"
       (ngSubmit)="onSubmit()"
