--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <!-- about me -->
   <div class="container" fxLayout="column" fxLayoutAlign="center center">
     <h1 class="about-me">About Me</h1>
-    <div>
+    <div class="hello">
       <img
       src="/myCV/assets/profile.jpeg"
       class="profile-pic"
@@ -10,11 +10,9 @@
     />
     <div>
       <h4 fxFlex="1 1 auto" class="about-text">
-        Hello! My name is Lazar Pešić, a passionate software engineer currently
-        finishing my final thesis in Software and Data Engineering at Singidunum
-        University in Belgrade. With a strong academic foundation in Full stack Web Development, Computer
-        Vision, Artificial Intelligence and Game Development. I am well-versed
-        in both theoretical and practical aspects of software development.
+        Hello! My name is Lazar Pešić, a passionate software engineer with a degree in Software and Data Engineering from Singidunum University in Belgrade. With a strong academic foundation in Full-Stack Web Development, Computer Vision, Artificial Intelligence, and Game Development, I am well-versed in both the theoretical and practical aspects of software development.
+
+        I am currently looking for opportunities to live and work in Finland, where I can apply my skills and grow as a developer.
       </h4>
     </div>
   </div>
