--- a/src/app/android/android.component.html
+++ b/src/app/android/android.component.html
@@ -3,7 +3,7 @@
   <!-- Toolbar  -->
   <div class="toolbar-container">
     <img
-      src="/myCV/assets/LOGO.jpg"
+      src="/myCV/assets/logo.jpg"
       style="width: auto; height: 60px"
       routerLink="/"
       class="logo-button"
