--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -3,17 +3,7 @@
 </div>
 <div class="button-container" fxLayout="column" fxLayoutAlign="center center">
   <button mat-fab extended (click)="downloadPDFWeb()">
-    <mat-icon>download</mat-icon>Download PDF Web_Dev Resume
-  </button>
-</div>
-<div class="button-container" fxLayout="column" fxLayoutAlign="center center">
-  <button mat-fab extended (click)="downloadPDFGame()">
-    <mat-icon>download</mat-icon>Download PDF Game_Dev Resume
-  </button>
-</div>
-<div class="button-container" fxLayout="column" fxLayoutAlign="center center">
-  <button mat-fab extended (click)="downloadPDFIoT()">
-    <mat-icon>download</mat-icon>Download PDF IoT Resume
+    <mat-icon>download</mat-icon>Download Resume
   </button>
 </div>
 
@@ -45,43 +35,13 @@
     </mat-expansion-panel-header>
     <h1>Bachelor in Software and Data Engineering</h1>
     <h2>Singidunum University, Belgrade</h2>
-    <h3>Sep 2017 - 2024</h3>
-    <h3>Finishing final thesis for diploma, cleared all the other classes</h3>
-    <li>Web Programming</li>
-    <li>Internet Technology and Web Services</li>
-    <li>Networks</li>
-    <li>Web Design and Programming</li>
-    <li>Artificial Intellence</li>
-    <li>Computer Vision</li>
-    <li>Introduction to Machine Learning</li>
-    <li>Programming Languages for Data Science</li>
-    <li>Applied Probability and Statistics</li>
-    <li>Security Aspects in Software Engineering</li>
-    <li>Software Testing and Quality Assurance</li>
-    <li>Games Computing</li>
-    <li>Mobile Application Development</li>
-    <li>Computers Graphics</li>
-    <li>Sensor Systems</li>
-    <li>Internet of Things</li>
-    <li>Signals and Systems</li>
-    <li>Operating Systems and System Programming</li>
-    <li>Mining of Massive Datasets</li>
-    <li>Software Specification and Modelling</li>
-    <li>Cloud Computing</li>
-    <li>Non-relational Databases</li>
-    <li>Algorithms and Data Structures</li>
-    <li>Database Systems</li>
-    <li>Object Oriented Software Design and Development</li>
-    <li>Scientific English</li>
-    <li>Entrepreneurship in Software Engineering</li>
-    <li>Principles of Computer Programming</li>
-    <li>Spanish language 1</li>
-    <li>Discrete Mathematics</li>
-    <li>Applied Calculus</li>
+    <h3>Sep 2017 - Jan 2025</h3>
+    <h3>The student successfully defended his Practical Research and
+      Business Skills with an excellent grade 97 (10/10).</h3>
     <br />
     <h1>Theoretical and Experimental Physics</h1>
     <h2>Faculty of Physics, Belgrade</h2>
-    <h3>2015 - 2017</h3>
+    <h3>Sep 2015 - Sep 2017</h3>
     <h3>Attendet</h3>
     <li>Physics Laboratory 1&2</li>
     <li>Foundamentals of Astrophysics</li>
@@ -119,7 +79,7 @@
     />
     <h1>120-Hours TEFL Certificate Course</h1>
     <img
-      src="/myCV/assets/TEFEL.jpg"
+      src="/myCV/assets/TEFL.jpg"
       class="certificate-img"
       alt="Certificate"
     />
