--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
     <h1 class="about-me">About Me</h1>
     <div class="hello">
       <img
-      src="/myCV/assets/profile.jpeg"
+      src="/assets/profile.jpeg"
       class="profile-pic"
       alt="profile picture"
     />
