--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -67,19 +67,19 @@
     </mat-expansion-panel-header>
     <h1>Software and Data Engineering Certificate</h1>
     <img
-      src="/myCV/assets/singiCertificate.jpg"
+      src="/assets/singiCertificate.jpg"
       class="certificate-img"
       alt="Certificate"
     />
     <h1>Univercity Grades</h1>
     <img
-      src="/myCV/assets/singiGrades.jpg"
+      src="/assets/singiGrades.jpg"
       class="certificate-img"
       alt="Certificate"
     />
     <h1>120-Hours TEFL Certificate Course</h1>
     <img
-      src="/myCV/assets/TEFL.jpg"
+      src="/assets/TEFL.jpg"
       class="certificate-img"
       alt="Certificate"
     />
