--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -6,6 +6,11 @@
     <mat-icon>download</mat-icon>Download Resume
   </button>
 </div>
+<div class="button-container" fxLayout="column" fxLayoutAlign="center center">
+  <button mat-fab extended (click)="downloadDocx()">
+    <mat-icon>download</mat-icon>Download Recommendation Letter
+  </button>
+</div>
 
 <mat-accordion class="cv-column">
   <mat-expansion-panel hideToggle>
