fixed typo in contact phone number and added Khajits

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -7,10 +7,10 @@
     </p>
 
     <p class="head-card-text">
-      Finnish phone:
+      Phone number:
       <span class="email">{{ phonemy }}</span> <br />
     </p>
-    <p class="head-card-text">or directly massage me on whatsapp</p>
+    <p class="head-card-text">or directly massage me on whatsapp:(your maasage will be answered the next day) </p>
     <!-- when working add to the text above (your maasage will be answered the next day) -->
     <form
       [formGroup]="formForWhatsApp"
